k8s_manifests/service-elb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-ext
spec:
  type: LoadBalancer
  selector:
    app: nginx-dp
  ports:
  - port: 80
    targetPort: 80
