k8s_manifests/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx-nodeport
spec:
  selector:
    app: nginx-dp
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-dp
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:              
              serviceName: service-nginx-nodeport
              servicePort: 80
